fix: SonarQube code smells - Math.clamp, constructor injection, nested ternaries, extract constants, remove unused imports, assertNull, remove commented code, reduce cognitive complexity